# fatcrab-trading-ffi

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh
src/: error.rs  fatcrab_trading.udl  lib.rs  maker.rs  offer.rs  order.rs  peer.rs  taker.rs  trade_rsp.rs  trader.rs  types.rs
