[package]
name = "fatcrab_trading_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "fatcrab_trading"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
bip39 = "2.0"
bitcoin = "0.30"
core-rpc = "0.17"
secp256k1 = "0.27"
thiserror = "1.0.50"
url = "2.0"
uuid = { version = "1.4", features = ["v4"] }

fatcrab-trading = { git = "https://github.com/nobu-maeda/fatcrab-trading" }
uniffi = { version = "0.25.2", features = ["cli"] }
tokio = { version = "1.34", features = ["macros", "sync", "rt"] }

[build-dependencies]
uniffi = { version = "0.25.2", features = ["build"] }
