[package]
name = "fatcrab_trading_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "fatcrab_trading"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
bip39 = "2.0"
bitcoin = "0.30"
core-rpc = "0.17"
fatcrab-trading = { git = "https://github.com/nobu-maeda/fatcrab-trading" }
once_cell = "1.19"
secp256k1 = "0.27"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-oslog = { git = "https://github.com/Absolucy/tracing-oslog", branch = "main" }
tracing-subscriber = "0.3.18"
url = "2.0"
uuid = { version = "1.4", features = ["v4"] }
uniffi = { version = "0.26.1", features = ["cli"] }
tokio = { version = "1.36", features = ["macros", "sync", "rt"] }

[build-dependencies]
uniffi = { version = "0.26.1", features = ["build"] }
